style.css
h1 
{text-align: center;
color:deeppink;
font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
font-size: xx-large;}

h2 {
    color:deeppink;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}
 
body {
    background-color: blanchedalmond; body 
    font-family: Arial, Helvetica, sans-serif;
    margin: 1em;
  
}

